--- a/UiT.Blazor.Ordsky/wwwroot/index.html
+++ b/UiT.Blazor.Ordsky/wwwroot/index.html
@@ -8,7 +8,7 @@
     <base href="/" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="flags/flag-icons.css" rel="stylesheet" />
+    <!--<link href="flags/flag-icons.css" rel="stylesheet" />-->
 
     <!-- MudBlazor -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
@@ -17,7 +17,7 @@
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <link href="UiT.Blazor.Ordsky.styles.css" rel="stylesheet" /> -->
     <!-- Spinkit https://github.com/EdCharbeneau/BlazorPro.Spinkit/ -->
-    <link href="_content/BlazorPro.Spinkit/spinkit.min.css" rel="stylesheet" />
+    <!--<link href="_content/BlazorPro.Spinkit/spinkit.min.css" rel="stylesheet" />-->
 </head>
 
 <body>
@@ -27,14 +27,6 @@
             <div style="display:flex; gap:10px; justify-content:center; align-items:center">
                 <div class="spinner-border" role="status"></div>
                 Vennligst vent mens vi laster inn...
-            </div>
-        </div>
-        <div class="modal-overlay">
-            <div class="sk-fold">
-                <div class="sk-fold-cube"></div>
-                <div class="sk-fold-cube"></div>
-                <div class="sk-fold-cube"></div>
-                <div class="sk-fold-cube"></div>
             </div>
         </div>
     </div>
