--- a/UiT.Blazor.Ordsky/wwwroot/index.html
+++ b/UiT.Blazor.Ordsky/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
 
-    <title>UiT.Blazor.Ordsky</title>
+    <title>Gutan.BlazorWasm.Ordsky</title>
     <base href="/" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <link href="css/app.css" rel="stylesheet" />
@@ -15,7 +15,6 @@
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 
     <!-- If you add any scoped CSS files, uncomment the following to load them
-    <link href="UiT.Blazor.Ordsky.styles.css" rel="stylesheet" /> -->
     <!-- Spinkit https://github.com/EdCharbeneau/BlazorPro.Spinkit/ -->
     <link href="_content/BlazorPro.Spinkit/spinkit.min.css" rel="stylesheet" />
 </head>
@@ -23,7 +22,7 @@
 <body>
     <div id="app">
         <div style="position:absolute; top:30vh; width:100%; text-align:center">
-            <h1>UiT Ordsky</h1>
+            <h1>Gutan's' Ordsky</h1>
             <div style="display:flex; gap:10px; justify-content:center; align-items:center">
                 <div class="spinner-border" role="status"></div>
                 Vennligst vent mens vi laster inn...
