--- a/UiT.Blazor.Ordsky/wwwroot/index.html
+++ b/UiT.Blazor.Ordsky/wwwroot/index.html
@@ -8,7 +8,6 @@
     <base href="/" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <link href="css/app.css" rel="stylesheet" />
-    <!--<link href="flags/flag-icons.css" rel="stylesheet" />-->
 
     <!-- MudBlazor -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
@@ -16,13 +15,13 @@
 
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <!-- Spinkit https://github.com/EdCharbeneau/BlazorPro.Spinkit/ -->
-    <!--<link href="_content/BlazorPro.Spinkit/spinkit.min.css" rel="stylesheet" />-->
+    <link href="_content/BlazorPro.Spinkit/spinkit.min.css" rel="stylesheet" />
 </head>
 
 <body>
     <div id="app">
         <div style="position:absolute; top:30vh; width:100%; text-align:center">
-            <h1>Gutan's' Ordsky</h1>
+            <h1>Gutans ordsky</h1>
             <div style="display:flex; gap:10px; justify-content:center; align-items:center">
                 <div class="spinner-border" role="status"></div>
                 Vennligst vent mens vi laster inn...
